# SCW-Bot

./: .env.example  Procfile  README.md  main.py  pyproject.toml  tox.ini
.github/: dependabot.yml
cogs/: all_commands.py  events.py
tempest/: __init__.py  __main__.py
tempest/exts/: listeners.py  utilities.py
tempest/utils/: Tempest.py  __init__.py  dicts.py
utils/: Bot.py  config.py
