[tool.poetry]
name = "tempest"
version = "2.0.0"
description = "The guild-reserved bot for Sham's Code Workspace."
authors = ["Sham <thesham@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
disnake = "^2.5.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.6.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
